Skip to content

Patch: fix format-security warning in vlc

By default in recent Mandriva Linux release, packages are build with -Werror=format-security to fix potential security vulnerability in format strings (see http://wiki.mandriva.com/en/Development/Tasks/Packaging/Problems#format_not_a_string_literal_and_no_format_arguments ).

Attached is a patch to fix those errors in vlc code (1.0 rc3).

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information