Fix format security warnings (fixes: #2857)

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>